--- a/demo/index.html
+++ b/demo/index.html
@@ -50,6 +50,28 @@
 
            <div>This is a HTML container</div>
 
+           JSON example:
+
+           ```json
+           {
+             "test": "true"
+           }
+           ```
+
+           ## Security
+
+           [Link](http://url.com" onclick="alert('This should not happen')")
+
+           <a href="http://url.com" onclick="alert('This should not happen')">Link</a>
+
+          <table><tr><td>
+          <pre>
+          **Hello**,
+
+          _world_.
+          </pre>
+          </td></tr></table>
+
           Example:
 
           ```html
